kubernetes-manifests/hello.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idea-cloud-code-plugin-skaffold-service
spec:
  type: LoadBalancer
  selector:
    app: idea-cloud-code-plugin-skaffold
  ports:
  - name: http
    port: 80
    targetPort: 8080
